Fix swagger docs bugs
