# proxy_app/httpd/docs/swagger.yaml
@@ -45,6 +45,8 @@ definitions:
         type: string
       recipient:
         type: string
+      referenced_workstep_type:
+        type: string
       workgroup_id:
         type: string
     type: object
@@ -312,7 +314,7 @@ paths:
       parameters:
       - description: Feedback Request
         in: body
-        name: user
+        name: feedback
         required: true
         schema:
           $ref: '#/definitions/handler.createSynchronizationFeedbackRequest'
@@ -362,7 +364,7 @@ paths:
       parameters:
       - description: Organization Request
         in: body
-        name: user
+        name: organization
         required: true
         schema:
           $ref: '#/definitions/handler.createOrgRequest'
@@ -412,6 +414,87 @@ paths:
       summary: Delete organization
       tags:
       - Organizations
+  /sorwebhook:
+    get:
+      consumes:
+      - application/json
+      description: get sor webhooks
+      parameters:
+      - description: uuid
+        in: path
+        name: id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handler.workgroupMemberDetailsDto'
+            type: array
+      security:
+      - BasicAuth: []
+      summary: Get sor webhooks
+      tags:
+      - SOR Webhooks
+    post:
+      consumes:
+      - application/json
+      description: Create new SOR webhook
+      parameters:
+      - description: Suggestion Request
+        in: body
+        name: sorWebhook
+        required: true
+        schema:
+          $ref: '#/definitions/handler.createSuggestionRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "422":
+          description: Unprocessable Entity
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BasicAuth: []
+      summary: Create new SOR webhook based on parameters
+      tags:
+      - SOR Webhook
+  /sorwebhook/{id}:
+    delete:
+      description: Delete sorWebhook member
+      parameters:
+      - description: uuid
+        in: path
+        name: id
+        type: string
+      responses:
+        "204":
+          description: ""
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BasicAuth: []
+      summary: Delete sorWebhook member
+      tags:
+      - SorWebhook Members
   /suggestion:
     post:
       consumes:
@@ -420,7 +503,7 @@ paths:
       parameters:
       - description: Suggestion Request
         in: body
-        name: user
+        name: suggestion
         required: true
         schema:
           $ref: '#/definitions/handler.createSuggestionRequest'
@@ -539,7 +622,7 @@ paths:
       parameters:
       - description: Workgroup Request
         in: body
-        name: user
+        name: workgroup
         required: true
         schema:
           $ref: '#/definitions/handler.createWorkgroupRequest'
@@ -624,7 +707,7 @@ paths:
         type: string
       - description: Workgroup Member Request
         in: body
-        name: user
+        name: workgroupMember
         required: true
         schema:
           $ref: '#/definitions/handler.createWorkgroupMemberRequest'
